Slight CSS card tweak to fix spacing

--- a/less/widgets/cards.less
+++ b/less/widgets/cards.less
@@ -78,7 +78,7 @@
     		position: relative;
     		background-color:  @purple;
     		margin: 8px 0 0 -35px;
-    		padding: 10px 0px 10px 35px;
+    		padding: 8px 0 20px -35px;
     		width: 90%;
  			&:after {
   				position: absolute;
@@ -95,9 +95,6 @@
   			a {  				
   				color: white;
   			}
-		}
-		p {
-			padding: 20px 0;
 		}
 	}
 	.enhanced-card,
