--- a/style.dev.css
+++ b/style.dev.css
@@ -8827,7 +8827,7 @@ ul.shortcode-blogroll-mini {
   position: relative;
   background-color: #4b2e83;
   margin: 8px 0 0 -35px;
-  padding: 10px 0px 10px 35px;
+  padding: 8px 0 20px -35px;
   width: 90%;
 }
 .cards-widget .enhanced-card h3:after {
@@ -8849,9 +8849,6 @@ ul.shortcode-blogroll-mini {
 }
 .cards-widget .enhanced-card h3 a {
   color: white;
-}
-.cards-widget .enhanced-card p {
-  padding: 20px 0;
 }
 .cards-widget .enhanced-card,
 .cards-widget .boundless-card {
